# Crypto-Trader

./: .env.example  .gitignore  .gitleaks.toml  2025-11-16-hei.txt  ANALYTICS_QUICK_REFERENCE.md  AUTOMATION_GUIDE.md  BACKTEST_INTEGRATION_TEST_REPORT.md  BACKTEST_TESTING_PLAN.md  BACKTEST_TEST_STRATEGY.md  BACKTEST_VALIDATION.md  BATCH_5_COMPLETION_SUMMARY.md  BATCH_5_VISUAL_SUMMARY.txt  BIGDECIMAL_MIGRATION_PLAN.md  BUILD_INSTRUCTIONS.md  BUILD_RUN.md  CALCULATION_AUDIT.md  CODE_AUDIT_REPORT.md  CODE_REVIEW.md  COMPILATION_FIXES_SUMMARY.md  DATABASE_AUDIT_FINDINGS.md  DB_MIGRATION_POLICY.md  EXPERT_ANALYSIS_COMPARISON.md  FUNCTION_SPECS.md  Fullført (Phase 3 - 30% Complete).md  Fullført (Phase 3 - 75% Complete).md  GUARANTEED_STRATEGY_FIX.md  HEDGE_FUND_QUALITY_FIXES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_DELIVERABLES.md  MIGRATIONS.md  NAVIGATION_REDESIGN.md  PARALLEL_EXECUTION_SUMMARY.md  PHASE4_PLANNING.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v19.md  REVIEW_READY_CHECKLIST.md  (+19 more)
TEMP_DISABLED_LEARNING/: FileStorageManager.kt  KnowledgeBaseRepository.kt  KnowledgeBaseRepositoryImpl.kt  Learning.kt  LearningDao.kt  LearningDatabase.kt  LearningEntities.kt  LearningRepository.kt  LearningRepositoryImpl.kt  LearningRepositoryModule.kt  ProgressRepository.kt  ProgressRepositoryImpl.kt
app/: build.gradle.kts  proguard-rules.pro
diagnostics/: diagnostic_rsi_strategy.json
docs/: CryptoTrader_Complete_System_Documentation.md  DOCUMENTATION_DELIVERY_SUMMARY.md  PHASE3_E2E_GUIDE.md  (+4 more)
(+348 files in other folders)
